--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="player-container1">
+        <!-- Song -->
+        <div class="img-contaniner">
+            <img src="img/jacinto-1.jpg" alt="Album Art">
+        </div>
+        <h2 id="title">Electric Chill Machine2</h2>
+        <h3 id="artist">Syd</h3>
+        <audio src="music/jacinto-1.mp3" controls></audio>
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
