--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> 
     <div class="player-container">
         <!-- song -->
         <div class="img-container">
-            <img src="img/jacinto-1.jpg" alt="Album Art">
+            <img src="img/chill-1.jpg" alt="Album Art" />
         </div>
         <h2 id="title">Electric Chill Machine</h2>
         <h3 id="artist">Syd Roby</h3>
-        <audio src="music/jacinto-1.mp3"></audio>
+        <audio src="music/chill-1.mp3"></audio>
         <!-- Progress -->
         <div class="progress-container" id="progress-container">
             <div class="progress" id="progress"></div>
